fix : cors edit #3